Update the account creation endpoint to allow the trustline assets to be defined as request parameters
