# openapi/main.yaml
@@ -296,6 +296,23 @@ paths:
                   type: string
                   description: "The address of the account to be created."
                   example: "GBQ4HFNATBR4NXIDHDNSLAXZAWUFQ7DLMS5DUFWOBXNXFBOZFE3NQ243"
+                assets:
+                  type: array
+                  description: "List of assets to be created."
+                  items:
+                    type: object
+                    properties:
+                      code:
+                        type: string
+                        description: "The code of the asset."
+                        example: "USDC"
+                      issuer:
+                        type: string
+                        description: "The issuer of the asset."
+                        example: "GBBD47IF6LWK7P7MDEVSCWR7DPUWV3NY3DTQEVFL4NAT4AQH3ZLLFLA5"
+                  required:
+                    - code
+                    - issuer
                 signers:
                   type: array
                   description: "List of signers with their respective addresses, types, and weights."
@@ -319,6 +336,9 @@ paths:
                 - signers
               example:
                 address: "GBQ4HFNATBR4NXIDHDNSLAXZAWUFQ7DLMS5DUFWOBXNXFBOZFE3NQ243"
+                assets:
+                  - code: "USDC"
+                    issuer: "GBBD47IF6LWK7P7MDEVSCWR7DPUWV3NY3DTQEVFL4NAT4AQH3ZLLFLA5"
                 signers:
                   - address: "GCXCF2T2FUY6UFYBLXNLJKGA4K6Y23KQEWTGV2X2YRBYOTP2RVYKY2DU"
                     type: "full"
